--- a/localisation/russian/countries_l_russian.yml
+++ b/localisation/russian/countries_l_russian.yml
@@ -558,6 +558,8 @@
  SAF_fascism_DEF:0 "Бурская Республика"
  SAF_neutrality:0 "Унитарная Южная Африка"
  SAF_neutrality_DEF:0 "Унитарная Южная Африка"
+ SAF_democratic:0 "Южно-Африканский Союз"
+ SAF_democratic_DEF:0 "Южно-Африканский Союз"
  SAF_communism:0 "Капская Коммуна"
  SAF_communism_DEF:0 "Капская Коммуна"
  SAF_fascism_ADJ:0 "Бурск"
@@ -925,7 +927,7 @@
  EGY_DEF:0 "Египет"
  EGY_ADJ:0 "Египетск"
  LBA_neutrality:0 "Санусия"
- LBA_neutrality_DEF:0 "Санусия"
+ LBA_neutrality_DEF:0 "Сануситский Орден"
  LBA_fascism:0 "Сануситский Орден"
  LBA_fascism_DEF:0 "Сануситский Орден"
  LBA_communism:0 "Союз Киренаики"
