--- a/localisation/russian/parties_l_russian.yml
+++ b/localisation/russian/parties_l_russian.yml
@@ -995,13 +995,15 @@
  MAC_neutrality_party_long:0 "Внутренняя Македонская Революционная Организация"
 
 
- SAF_neutrality_party:0 "Генеральное Губернаторство"
+ SAF_neutrality_party:0 "Исполнительный Совет"
  SAF_communism_party:0 "МСЛ"
  SAF_communism_party_long:0 "Международная Социалистическая Лига"
  SAF_democratic_party:0 "ЮАФ"
  SAF_democratic_party_long:0 "Южноафриканская Партия"
  SAF_fascism_party:0 "Биттерейндеры"
  SAF_fascism_party_long:0 "Непримиримые Биттерейндеры"
+ SAF_national_party:0 "НП"
+ SAF_national_party_long:0 "Национальная Партия"
 
  NZL_neutrality_party:0 "Губернаторство Новой Зеландии"
  NZL_democratic_party:0 "Либеральная Партия"
