--- a/localisation/russian/state_names_l_russian.yml
+++ b/localisation/russian/state_names_l_russian.yml
@@ -1045,6 +1045,10 @@
  STATE_1044: "Восточный Парциум"
  STATE_1045: "Цзяньдао" #間島
  STATE_1046: "Ганьчжоу" #贛州
+ STATE_1047: "Басутоленд"
+ STATE_1048: "Свазиленд"
+ STATE_1049: "Оранжевое Свободное Государство"
+ STATE_1050: "Берег Скелетов"
 
  Dyushambe: "Dyushambe"
  YODONG_STATE: "Yodong"
