--- a/localisation/russian/victory_points_l_russian.yml
+++ b/localisation/russian/victory_points_l_russian.yml
@@ -1913,6 +1913,7 @@
  VICTORY_POINTS_13203: "Джуно"
  VICTORY_POINTS_944: "Яньцзи" #延吉
  VICTORY_POINTS_1104: "Яньтай" #延吉
+ VICTORY_POINTS_4556: "Масеру"
 
  PETROGRAD_PROV: "Petrograd"
  LENINGRAD_PROV: "Leningrad"
