--- a/localisation/russian/ww1_events_l_russian.yml
+++ b/localisation/russian/ww1_events_l_russian.yml
@@ -6577,6 +6577,17 @@ BUL_FRA_alliance:0 "Franco-Bulgarian Alliance"
  ww1_southafrica.5.d_2:0 "Christiaan Rudolf de Wet, a South African Boer general, died today at his farm. In his lifetime, he was much admired as a soldier who fought bravely against British attacks back in the Boer War. In his later years, he took part in the Boer Revolt against the war with Germany, but was pardoned on the promise that he would cease any political activity."
  ww1_southafrica.5.d_3:0 "Christiaan Rudolf de Wet, a South African Boer general, died today at his farm. In his lifetime, he was much admired as a soldier who fought bravely against British attacks back in the Boer War. As the leader of the re-established Free State, he fought for the freedom of the Boers until his death."
  ww1_southafrica.5.a:0 "A hero has fallen."
+ ww1_southafrica.6.t: "Louis Botha Dies"
+ ww1_southafrica.6.d: "General Louis Botha died of heart failure at his home following an attack of Spanish influenza in the early hours of the morning. He was 56. His wife Annie was at home and was joined by Engelenburg who had acted as a private secretary to Botha. Botha was laid to rest in the Heroes' Acre of the Church Street Cemetery in Pretoria."
+ ww1_southafrica.7.t: "South African Party Lost the Elections"
+ ww1_southafrica.7.d: "Smuts had angered South African nationalists by his moderate stance on South African independence from the British Empire. The worldwide depression after the end of the First World War had led to a strike in South Africa, known as the Rand Rebellion, which had been defused through a combination of military force and negotiation with the outgunned unions, earning Smuts the enmity of the labour vote. As a consequence Smuts's SAP was defeated by a Nationalist–Labour Pact."
+ ww1_southafrica.7.a: "It's for the better, right?.."
+ ww1_southafrica.8.t: "Red Ensign Amendment"
+ ww1_southafrica.8.d: "A royal warrant was issued amending the South Africa Red Ensign so that the arms were on a white disc to bring it into line with a rule in the Admiralty Flag Book requiring the arms to be on a white disc if any part of them were the same colour as the field of the ensign."
+ ww1_southafrica.8.a: "It is more visible like that, yeah."
+ ww1_southafrica.9.t: ""Oranje, Blanje, Blou" Flag"
+ ww1_southafrica.9.d: "In 1925, discussion rose about creating a new flag for South Africa as many descendants of Boers found the Union Jack unacceptable after the Second Boer War. British South Africans wanted the Union Jack in the new flag as part of the British Empire while the Afrikaners did not. The majority British Natal Province threatened to secede from the Union if the Union Jack was removed. A compromise was reached whereby the new flag would consist of the Prinsenvlag as this was the first flag raised on South Africa and a badge in the centre consisting of the Union Jack with the flags of the Orange Free State and the South African Republic. The Union Jack was mirrored in the new flag with the hoist on the right so that it did not take precedence over the others."
+ ww1_southafrica.9.a: "A flag to symbolize our union!"
   
  #USA 
  ww1_usa.2.t:0 "Организация американских государств"
@@ -12622,9 +12633,9 @@ BUL_FRA_alliance:0 "Franco-Bulgarian Alliance"
  canada.74.d:0 "После бурных событий и революции в Великобритании королевская семья, спасая свои жизни, выехала за границу. Никто не ожидал этих ветров и волн, но и не осмеливался сказать, что через несколько лет монархия вновь приземлится на родных островах.\nКак бы то ни было, Британская империя возродилась, и "Юнион Джек" вновь гордо поднялся в Лондоне. [ENG.GetLeader] вернулся на родину с великолепным парадом верных гвардейцев и всенародным приветствием." 
  canada.74.a:0 "Да здравствует Империя! \n(Играть за [Eng.GetName])" 
  canada.74.b:0 "Да здравствует Империя!" 
- kis_news.150.t: "The Death of Louis Cyr"
- kis_news.150.d: "Louis Cyr, or Cyprien-Noé Cyr, passed away at the age of 49, succumbing to chronic nephritis. His death marks the end of an era for the world of strongmen. Born in 1863, Cyr became a household name not only in Canada but across the world for his extraordinary feats of strength. His legendary back lift of 4,337 pounds has yet to be matched, and many believe it may never be surpassed. Crowds from Montreal to Europe marveled at his displays of human power, which included lifting horses, resisting the pull of teams of horses, and hoisting enormous weights above his head. Though his health had been declining in recent years, Cyr's reputation remained untarnished. In an age where physical prowess was admired, he stood as a living embodiment of human potential. His passing is mourned by many, but his legacy will endure as tales of his strength will surely continue to be told for generations."
- kis_news.150.a: "Rest in Peace."
+ canada.75.t: "The Death of Louis Cyr"
+ canada.75.d: "Louis Cyr, or Cyprien-Noé Cyr, passed away at the age of 49, succumbing to chronic nephritis. His death marks the end of an era for the world of strongmen. Born in 1863, Cyr became a household name not only in Canada but across the world for his extraordinary feats of strength. His legendary back lift of 4,337 pounds has yet to be matched, and many believe it may never be surpassed. Crowds from Montreal to Europe marveled at his displays of human power, which included lifting horses, resisting the pull of teams of horses, and hoisting enormous weights above his head. Though his health had been declining in recent years, Cyr's reputation remained untarnished. In an age where physical prowess was admired, he stood as a living embodiment of human potential. His passing is mourned by many, but his legacy will endure as tales of his strength will surely continue to be told for generations."
+ canada.75.a: "Rest in Peace."
  
  #KOREA 
  ww1_korea.1.t:0 "Корея провозглашает независимость"
