--- a/localisation/russian/ww1_focus_l_russian.yml
+++ b/localisation/russian/ww1_focus_l_russian.yml
@@ -454,8 +454,8 @@
  ENG_room_40_desc:0 "Harnessing the power of intelligence and secrecy, Room 40 serves as the nerve center of our cryptographic endeavors. Our commitment to excellence in code-breaking will yield invaluable intelligence, fortifying our national security."
  ENG_Boer_Blues:0 "Бурский блюз"
  ENG_Boer_Blues_desc:0 "Прошло уже почти десять лет с момента окончания Второй англо-бурской войны, и ее последствия все еще ощущаются не только по всей Южной Африке, но и по всей Империи в целом. Мы должны разобраться в том, что произошло и почему это произошло."
- ENG_free_saf:0 "Союз Южно-Африканских стран"
- ENG_free_saf_desc:0 "После многих долгих и трудных попыток, наконец, был создан Южноафриканский союз."
+ ENG_free_saf:0 "Южно-Африканский Доминион"
+ ENG_free_saf_desc:0 "The dream of a South African Dominion has been realized after years of perseverance and diplomatic finesse. This monumental achievement paves the way for a new era of stability and prosperity under the protective wing of the Empire."
  ENG_africa_regionalism:0 "Регионализм в Африке"
  ENG_africa_regionalism_desc:0 "Южная Африка уже доказывает, что является образцовой колонией, и мы должны стремиться внедрить аналогичную модель в наших африканских колониях."
  ENG_encourage_africa_colony:0 "Поощрять африканское поселение"
