--- a/localisation/russian/ww1_events_l_russian.yml
+++ b/localisation/russian/ww1_events_l_russian.yml
@@ -2601,10 +2601,9 @@ BUL_FRA_alliance:0 "Franco-Bulgarian Alliance"
  ww1_denmark.3.b:0 "Victorious!"
  ww1_denmark.3.c:0 "Kiel shall be separated as protectorate."
  ww1_denmark.3.e:0 "Aww damn. They chose Germany!"
- ww1_denmark.4.t:0 "Independent Iceland?"
+ ww1_denmark.4.t:0 "Danish–Icelandic Act of Union"
  ww1_denmark.4.d:0 "In the Great War we noticed that Iceland is too far and isolated from the Danish homeland. They have been under home rule since 1904, but may now have to be elevated to sovereign state."
  ww1_denmark.4.a:0 "We recognise."
- ww1_denmark.4.b:0 "Just enjoy the home rule..."
   
  ww1_sweden.2.t:0 "Оккупация Аландских островов"
  ww1_sweden.2.d:0 "В настоящее время Финляндия истекает кровью из-за гражданской войны. У нас есть прекрасная возможность начать быстрое вмешательство на Аландских островах, чтобы обеспечить защиту наших людей на этих островах."
@@ -6588,7 +6587,8 @@ BUL_FRA_alliance:0 "Franco-Bulgarian Alliance"
  ww1_southafrica.9.t: ""Oranje, Blanje, Blou" Flag"
  ww1_southafrica.9.d: "In 1925, discussion rose about creating a new flag for South Africa as many descendants of Boers found the Union Jack unacceptable after the Second Boer War. British South Africans wanted the Union Jack in the new flag as part of the British Empire while the Afrikaners did not. The majority British Natal Province threatened to secede from the Union if the Union Jack was removed. A compromise was reached whereby the new flag would consist of the Prinsenvlag as this was the first flag raised on South Africa and a badge in the centre consisting of the Union Jack with the flags of the Orange Free State and the South African Republic. The Union Jack was mirrored in the new flag with the hoist on the right so that it did not take precedence over the others."
  ww1_southafrica.9.a: "A flag to symbolize our union!"
-  
+ 
+ 
  #USA 
  ww1_usa.2.t:0 "Организация американских государств"
  ww1_usa.2.d:0 "На Четвертой международной конференции американских государств (Буэнос-Айрес, 1910) название организации было изменено на 'Союз американских республик', а Бюро стало 'Панамериканским союзом'. Панамериканский союз (здание) был построен в 1910 году на Конститушн Авеню, Северо-Запад, Вашингтон, округ Колумбия."
@@ -6982,8 +6982,8 @@ BUL_FRA_alliance:0 "Franco-Bulgarian Alliance"
  ww1_usa.129.b:0 "Кого это волнует"
  ww1_usa.129.c:0 "You can have some autonomy there."
  ww1_USA.130.t:0 "Вывод войск с Филиппин"
- ww1_USA.130.d:0 "Вывод войск с Филиппин"
- ww1_USA.130.a:0 "A military operation to thwart Philippine independence attempts has failed. The islands of the Philippines is out of control of the military."
+ ww1_USA.130.d:0 "A military operation to thwart Philippine independence attempts has failed. The islands of the Philippines is out of control of the military."
+ ww1_USA.130.a: "Damn it."
  ww1_USA.131.t:0 "Philippines Independence"
  ww1_USA.131.d:0 "Binarilan natin ang mga puting bayag nila!"
  ww1_USA.131.a:0 "Kalayaan!"
