new generic diplomacy tree

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -6,6 +6,8 @@
  sue_for_peace_FROM:0 "Sue for Peace with [FROM.GetNameDef]"
  ww1_claims_and_cores:0 "Claims and Cores"
  ww1_claims_and_cores_desc:0 "In the peace conference after the Great War, the victorious will be transferred with core states and claimed states from the defeatens, unless there is pre-scripted peace deal for the specific country or on the area."
+ request_french_cannons:0 "Request French Cannons"
+ request_german_guns:0 "Request German Guns"
 
  generic_raise_stability: "[generic_raise_stability_text]"
  generic_raise_stability_desc: "[generic_raise_stability_desc_text]"
