--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -1067,7 +1067,10 @@
  RAJ_swaraj_party:0 "SP"
  RAJ_swaraj_party_long:0 "Swaraj Party"
 
- RIN_berlin_committee_party:0 "Berlin Committee"
+ RIN_berlin_committee_party:0 "Das Indische Unabhängigkeitskomitee"
+ RIN_socialist_influence_party:0 "Socialist Influence"
+ RIN_nationalist_influence_party:0 "Nationalist Influence"
+ RIN_democratic_influence_party:0 "Democratic Influence"
 
  # (old content, to be deleted at some point)
  RAJ_lost_great_war:0 "Townshend Clique"
