--- a/localisation/english/ww1_raj_l_english.yml
+++ b/localisation/english/ww1_raj_l_english.yml
@@ -73,12 +73,6 @@
  # Caste System
  RAJ_caste_system:0 "Caste System"
  RAJ_caste_system_desc:0 "The caste system is a socio-political stratification of Indian society, taking its roots in ancient India. It divides the Indian population into different castes, assigned at birth, in order to determine individuals' roles within society. Transformed by various ruling elites during medieval India, it developed especially in the aftermath of the collapse of the Mughal Empire and the establishment of the British Raj. Our administration furthered this development, making rigid caste organisation a central mechanism of our colonial hold on the subcontinent. Since 1860, we incorporated the Indian caste system into our system of governance, granting administrative jobs and senior appointments only to Christians and people belonging to certain castes. While supported by the higher castes and nobility, granting us certain privileges, it remains a source of social unrest within the Indian population."
- 
- RAJ_caste_system2:0 "Caste System"
- RAJ_caste_system2_desc:0 "The caste system is a socio-political stratification of Indian society, taking its roots in ancient India. It divides the Indian population into different castes, assigned at birth, in order to determine individuals' roles within society. Transformed by various ruling elites during medieval India, it developed especially in the aftermath of the collapse of the Mughal Empire and the establishment of the British Raj. Our administration furthered this development, making rigid caste organisation a central mechanism of our colonial hold on the subcontinent. Since 1860, we incorporated the Indian caste system into our system of governance, granting administrative jobs and senior appointments only to Christians and people belonging to certain castes. While supported by the higher castes and nobility, granting us certain privileges, it remains a source of social unrest within the Indian population."
-
- RAJ_caste_system3:0 "Caste System"
- RAJ_caste_system3_desc:0 "The caste system is a socio-political stratification of Indian society, taking its roots in ancient India. It divides the Indian population into different castes, assigned at birth, in order to determine individuals' roles within society. Transformed by various ruling elites during medieval India, it developed especially in the aftermath of the collapse of the Mughal Empire and the establishment of the British Raj. Our administration furthered this development, making rigid caste organisation a central mechanism of our colonial hold on the subcontinent. Since 1860, we incorporated the Indian caste system into our system of governance, granting administrative jobs and senior appointments only to Christians and people belonging to certain castes. While supported by the higher castes and nobility, granting us certain privileges, it remains a source of social unrest within the Indian population."
 
  # Indian National Congress
  RAJ_indian_national_congress_low:0 "Low Indian National Congress Tensions"
@@ -113,6 +107,25 @@
  # South-Africa Anti-Indian Immigration Laws
  RAJ_anti_indian_immigration_laws:0 "Anti-Indian Immigration Laws"
  RAJ_anti_indian_immigration_laws_desc:0 ""
+
+ # RIN
+
+ RIN_united_front:0 "United Front"
+ RIN_united_front_desc:0 "In a rare moment of unity, the Indian Independence Committee has forged an alliance of revolutionaries—§qNationalists§!, §rRadicals§!, and §gIdealists§!—who have come together to shatter the chains of British rule. Fueled by a shared hatred for colonial oppression, this alliance combines the fire of India's revolutionary spirit with the strategic support of foreign allies. Though these factions have vastly different visions for India’s future, they are united in their belief that freedom must come first, at any cost."
+
+ RIN_max_von_oppenheim:0 "Max von Oppenheim"
+ RIN_max_von_oppenheim_desc:0 "Under the steely gaze of the §YGerman Supervisor§!, the Indian Independence Committee has transformed into a formidable force, assisted by vast financial resources, intelligence, and military teachings, they might very well turn the tide of rebellion in their favor. Yet, this power comes at a cost—their newfound strength is shackled to German ambitions, and the relentless pressure to serve foreign interests looms over their struggle for true independence. In this fierce dance of power, the flames of freedom burn bright, but so too does the shadow of external control."
+
+ RIN_max_von_oppenheim_reward:0 "§8Father of Holy War§!\n£GFX_war_support_modifiericons_texticon  Weekly War Support:§G +0.20%§!"
+ RIN_max_von_oppenheim_reward_2:0 "§8German Supervisor§!\n£GFX_boost_popularity_texticon  Daily Authoritarian Support:§G +0.05§!"
+
+ RIN_schabinger_von_schowingen:0 "Schabinger von Schowingen"
+ RIN_schabinger_von_schowingen_desc:0 "Under the steely gaze of the §YGerman Supervisor§!, the Indian Independence Committee has transformed into a formidable force, assisted by vast financial resources, intelligence, and military teachings, they might very well turn the tide of rebellion in their favor. Yet, this power comes at a cost—their newfound strength is shackled to German ambitions, and the relentless pressure to serve foreign interests looms over their struggle for true independence. In this fierce dance of power, the flames of freedom burn bright, but so too does the shadow of external control."
+
+ RIN_eugen_mittwoch:0 "Eugen Mittwoch"
+ RIN_eugen_mittwoch_desc:0 "Under the steely gaze of the §YGerman Supervisor§!, the Indian Independence Committee has transformed into a formidable force, assisted by vast financial resources, intelligence, and military teachings, they might very well turn the tide of rebellion in their favor. Yet, this power comes at a cost—their newfound strength is shackled to German ambitions, and the relentless pressure to serve foreign interests looms over their struggle for true independence. In this fierce dance of power, the flames of freedom burn bright, but so too does the shadow of external control."
+
+ RIN_eugen_mittwoch_reward:0 "§gDiligent Researcher§!\n£GFX_research_speed_texticon  Research Speed:§G +5.00%§!"
 
  ##############
  # CHARACTERS #
@@ -183,7 +196,25 @@
  RAJ_edward_charles_buck:0 "Edward Charles Buck"
 
  RAJ_havelock_charles:0 "Havelock Charles"
- 
+
+ # Character (RIN)
+
+ RIN_berlin_committee_character:0 "The Intelligence Bureau of the East"
+ RIN_berlin_committee_character_desc:0 ""
+
+ RIN_virendranath_chattopadhyaya:0 "Virendranath Chattopadhyaya"
+ RIN_virendranath_chattopadhyaya_desc:0 "ssss"
+
+ RIN_jnanendra_das_gupta:0 "Jnanendra Das Gupta"
+ RIN_abinash_chandra_bhattacharya:0 "Abinash Chandra Bhattacharya"
+ RIN_bhagwan_singh_gyanee:0 "Bhagwan Singh Gyanee"
+ RIN_chempakaraman_pillai:0 "Chempakaraman ''Venkidi'' Pillai"
+ RIN_har_dayal:0 "Har Dayal"
+ RIN_mohamed_barakatullah_bhopali:0 "Mohamed Barakatullah Bhopali"
+ RIN_tarak_nath_das:0 "Tarak Nath Das"
+ RIN_bagha_jatin:0 "Bagha Jatin"
+ RIN_ubaidullah_sindhi:0 "Ubaidullah Sindhi"
+
  # Traits
  RAJ_viceroy_and_governor_general_of_india:0 "Viceroy and Governor-General of India"
  RAJ_provisional_viceroy_and_governor_general_of_india:0 "Provisional Viceroy and Governor-General of India"
@@ -206,10 +237,37 @@
  RAJ_editor_of_the_imperial_gazetteer:0 "Editor of the Imperial Gazetteer"
  RAJ_grand_old_man_of_indian_agriculture:0 "''Grand Old Man'' of Indian Agriculture"
  RAJ_the_kings_surgeon:0 "The King's Surgeon"
+
+
+ RIN_the_berlin_committee:0 "International Committee"
+ RIN_chatto:0 "Chatto"
+ RIN_communistically_inclined:0 "Communistically Inclined"
+
+ RIN_nationalist:0 "§qNationalist§!"
+ RIN_socialist:0 "§rSocialist§!"
+ RIN_neutral:0 "§gNeutral§!"
+ RIN_moderate_socialist:0 "§RModerate Leftist§!"
+ 
+ RIN_genius_chemist:0 "Genius Chemist"
+ RIN_educated_revolutionnary:0 "Educated Rebel"
+ RIN_president_of_the_ghadar_party:0 "Ghadar Party President"
+ RIN_jai_hind:0 "Jai Hind"
+ RIN_jai_hind_reward:0 "ssss"
+ RIN_anarcho_nationalist:0 "Anarcho-Nationalist"
+ RIN_pan_islamist:0 "Religious Coordinator"
+ RIN_nationalist_editor:0 "Incendiary Speaker"
+ RIN_tiger_killer:0 "Revolutionnary Thug"
+ RIN_home_minister:0 "Home Minister"
  
  ##########
  # EVENTS #
  ##########
+ 
+ # Revolutionnary India Event
+
+ ww1_rin.1.t:0 "Organising the Berlin Committee"
+ ww1_rin.1.d:0 "Upon their arrival in Berlin, Abhinash Bhattacharya and Virendranath Chattopadhyaya were assigned a building in the Schöneberg suburb as their new headquarters. In their first meeting with Max von Oppenheim, the Foreign Office liaison, Chattopadhyay clarified the goals and requirements of the committee:\n1. For the Germans to provide money, arms, experts in military strategy.\n2. Facilitate repatriation of Indian patriots in Europe and provide asylum in case of failure (and not yield to pressure as had happened in the case of Savarkar).\n3. Train Indians at Spandau and other military bases, including on submarine mines.\n4. Publish literature in Indian languages\n5. Provide aircraft for propaganda airdrops.\n6. Provide 10 rupee banknotes for secret use.\n7. Support with radio communication.\n8. No concession to Indian Principalities opposed to the plan to form a Socialist Republic.\n\nWith the help of Oppenheim, messages were sent out to Indian students in German universities, as well as Switzerland, Austria and the Netherlands, who were likely to share the same views."
+ ww1_rin.1.a:0 "Let's not waste time."
 
  # War Related
  ww1_war_raj.1.t:0 "Gandhi Returns to India"
@@ -600,7 +658,7 @@
 
  RAJ_organise_manoeuvres:0 "Organise Military Manoeuvres"
  
- RAJ_reform_the_ghq:0 "Empower the GHQ"
+ RAJ_reform_the_ghq:0 "Reform the GHQ"
 
  RAJ_organise_public_works:0 "Organise Public Works"
  RAJ_organise_public_works_1:0 "Organise Public Works"
@@ -1203,3 +1261,86 @@ RAJ_fiscal_reforms:0 "Fiscal Reforms"
 RAJ_fiscal_reforms_desc:0 "[promote_western_education_research_speed_number]"
 RAJ_social_reforms:0 "Social Reforms"
 RAJ_social_reforms_desc:0 ""
+
+# Focus Tree (RIN)
+
+RIN_organise_the_committee:0 "Organise the Committee"
+RIN_organise_the_committee_desc:0 ""
+
+
+RIN_oppenheim_leadership:0 "Oppenheim Leadership"
+RIN_oppenheim_leadership_desc:0 ""
+
+RIN_issue_ten_rupees_banknotes:0 "Issue Ten Rupees Banknotes"
+RIN_issue_ten_rupees_banknotes_desc:0 ""
+
+RIN_german_financial_support:0 "German Financial Support"
+RIN_german_financial_support_desc:0 ""
+
+RIN_spandau_training_grounds:0 "Spandau Training Grounds"
+RIN_spandau_training_grounds_desc:0 ""
+
+RIN_sway_indian_pows:0 "Sway Indian POW's"
+RIN_sway_indian_pows_desc:0 ""
+
+RIN_radio_communication:0 "Radio Communication"
+RIN_radio_communication_desc:0 ""
+
+RIN_german_instructors:0 "German Instructors"
+RIN_german_instructors_desc:0 ""
+
+
+RIN_the_intelligence_bureau_of_the_east:0 "The Intelligence Bureau of the East"
+RIN_the_intelligence_bureau_of_the_east_desc:0 ""
+
+RIN_the_ghadar_party:0 "The Ghadar Party"
+RIN_the_ghadar_party_desc:0 ""
+
+RIN_repatriation_of_ghadarites:0 "Repatriation of Ghadarites"
+RIN_repatriation_of_ghadarites_desc:0 ""
+
+RIN_central_leadership_in_punjab:0 "Central Leadership in Punjab"
+RIN_central_leadership_in_punjab_desc:0 ""
+
+RIN_allow_decentralised_leadership:0 "Allow Decentralised Leadership"
+RIN_allow_decentralised_leadership_desc:0 ""
+
+RIN_the_jugantar_organisation:0 "The Jugantar Organisation"
+RIN_the_jugantar_organisation_desc:0 ""
+
+RIN_universal_emporium:0 "Universal Emporium"
+RIN_universal_emporium_desc:0 ""
+
+RIN_relocate_to_balasor:0 "Relocate to Balasor"
+RIN_relocate_to_balasor_desc:0 ""
+
+RIN_merge_with_the_anushilan_samiti:0 "Merge with the Anushilan Samiti"
+RIN_merge_with_the_anushilan_samiti_desc:0 ""
+
+RIN_arms_shipments:0 "Arms Shipments"
+RIN_arms_shipments_desc:0 ""
+
+RIN_the_irish_connection:0 "The Irish Connection"
+RIN_the_irish_connection_desc:0 ""
+
+RIN_publish_nationalist_literature:0 "Publish Nationalist Literature"
+RIN_publish_nationalist_literature_desc:0 ""
+
+RIN_propaganda_airdrops:0 "Propaganda Airdrops"
+RIN_propaganda_airdrops_desc:0 ""
+
+
+RIN_the_provisional_government_of_india:0 "The Provisional Government of India"
+RIN_the_provisional_government_of_india_desc:0 ""
+
+RIN_influence_the_emir_inner_circle:0 "Influence the Emir Inner Circle"
+RIN_influence_the_emir_inner_circle_desc:0 ""
+
+RIN_siraj_al_akhbar:0 "Siraj Al-Akhbar"
+RIN_siraj_al_akhbar_desc:0 ""
+
+RIN_attract_foreign_aid:0 "Attract Foreign Aid"
+RIN_attract_foreign_aid_desc:0 ""
+
+RIN_contact_the_soviet_government:0 "Contact the Soviet Government"
+RIN_contact_the_soviet_government_desc:0 ""
