--- a/localisation/russian/ww1_characters_l_russian.yml
+++ b/localisation/russian/ww1_characters_l_russian.yml
@@ -175,7 +175,6 @@
  AUH_arthur_maximilian_bylandt_rheydt:0 "Arthur Maximilian Bylandt-Rheydt"
  AUH_franz_joseph_i:0 "Franz Joseph I"
  AUH_franz_joseph_i_desc:0 "Франц Иосиф I, самый старый и самый долгоправящий монарх Европы, взошел на престол в 1848 году в возрасте 18 лет на фоне революционного пыла «Весны народов». Его правление, которое длится уже более шести десятилетий, началось с отречения от престола его дяди Фердинанда I в попытке стабилизировать империю и подавить венгерское восстание. Его величайшее политическое достижение, Ausgleich 1867 года, предоставило Венгрии автономию в составе Австро-Венгерской двуединой монархии, восстановив хрупкий мир с мадьярами. \n\nВ 1910-х годах Франц Иосиф уже не тот энергичный правитель, каким был раньше. На девятом десятке жизни и седьмом десятилетии правления он остается символом стабильности и постоянства, но империя, которую он так долго возглавляет, трещит по швам. Националистические движения среди славян и даже некогда умиротворенных венгров грозят разорвать многонациональную империю на части. Франц Иосиф, выходец из старого мира, придерживается сложившихся в его правление традиций, опасаясь реформ, которые могут спасти его империю, но с такой же вероятностью и погубить ее. Не желая ничего менять, он оставляет принятие важнейших решений на усмотрение своих преемников, предпочитая комфорт устоявшегося порядка риску инноваций. \n\nКак последний монарх «старой школы», нежелание Франца Иосифа адаптироваться может оказаться самой большой ошибкой Австро-Венгерской Империи, столкнувшейся с неопределенным будущим."
- AUH_franz_joseph_von_habsburg:0 "Franz Joseph Karl"
  AUH_franz_ferdinand_i:0 "Franz Ferdinand I"
  AUH_franz_ferdinand_von_habsburg:0 "Franz Ferdinand von Österreich-Este"
  AUH_karl_i:0 "Karl I"
@@ -2761,6 +2760,11 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  ROM_petre_p_carp:0 "Petre P. Carp"
  ROM_constantin_dobrogeanu_gherea:0 "Constantin Dobrogeanu-Gherea"
  ROM_iacob_zadik:0 "Iacob Zadik"
+ ROM_dimitrie_sturdza:0 "Dimitrie Sturdza"
+ ROM_nicolae_filipescu:0 "Nicolae Filipescu"
+ ROM_nicolae_malaxa:0 "Nicolae Malaxa"
+ ROM_aurel_vlaicu_name:0 "Aurel Vlaicu"
+ ROM_traian_vuia_air:0 "Traian Vuia"
 
  # RUSSIA
  RUS_mikhail_aleksandrovich_romanov:0 "Mikhail Aleksandrovich Romanov"
