--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -207,6 +207,12 @@ ww1_germanrework.17.t:0 "Belgium Refuses"
  ww1_germanrework.16.d:0 ""
  ww1_germanrework.16.a:0 "They can't say we never tried..."
 
+#Adressing the matter of the German Identity
+ww1_germanrework.43.t:0 "A 'German' Empire"
+ ww1_germanrework.43.d:0 ""
+ ww1_germanrework.43.a:0 "Expand the citizenship"
+ ww1_germanrework.43.b:0 "A German Empire for the Poles? I think not"
+
 #The Zabern Affair
 #A Crisis Stirs
 ww1_germanrework.26.t:0 "A Crisis Stirs"
@@ -315,6 +321,7 @@ ww1_germanytooltip11:0 "Taking this focus will §Yput an end to the rebbelion§!
 ww1_germanytooltip12:0 "This is a §Rleftist§! law."
 ww1_germanytooltip13:0 "This is a §gcentrist§! law."
 ww1_germanytooltip14:0 "This is a §3rightist§! law."
+ww1_germanytooltip15:0 "This law will correlate to the ideology of the chancellor."
 
 #Dynamic Modifiers
 GER_agricultural_incentives:0 "Agricultural Incentives"
