--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -9258,9 +9258,9 @@ GER_sway_neutral_will_vote_20_percent:0 "§Y20%§! of §LNeutral deputies§! wil
 GER_law_pass:0 "§GThe Law shall pass§!"
 GER_law_dont_pass:0 "§RThe Law wont likely pass§!"
 GER_effect_if_it_pass:0 "\n\n§YEffect if the Law pass :§!"
-GER_vote_left_law:0 "This is considered as a leftist law. §Y90%§! of §Oleft deputies§! and §Y33%§! of §Lneutral deputies§! will vote it.\n\n"
-GER_vote_center_law:0 "This is considered as a centrist law. §Y90%§! of §gcenter deputies§! and §Y33%§! of §Lneutral deputies§! will vote it.\n\n"
-GER_vote_right_law:0 "This is considered as a rightist law. §Y90%§! of §2right deputies§! and §Y33%§! of §Lneutral deputies§! will vote it.\n\n"
+GER_vote_left_law:0 "This is considered as a leftist law. §Y100%§! of §Oleft deputies§!, §Y25%§! of §gcenter deputies§! and §Y25%§! of §Lneutral deputies§! will vote for it.\n\n"
+GER_vote_center_law:0 "This is considered as a centrist law. §Y100%§! of §gcenter deputies§!, §Y25%§! of §Oleft deputies§!,§Y25%§! of §2right deputies§! and §Y25%§! of §Lneutral deputies§! will vote it.\n\n"
+GER_vote_right_law:0 "This is considered as a rightist law. §Y100%§! of §2right deputies§!,§Y25%§! of §gcenter deputies§! and §Y25%§! of §Lneutral deputies§! will vote it.\n\n"
 
 left_vote_in_progress:0 "§OLeftist§! Law is being voted"
 center_vote_in_progress:0 "§gCentrist§! Law is being voted"
