--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -9255,8 +9255,8 @@ GER_sway_left_will_vote_20_percent:0 "§Y20%§! of §OLeft deputies§! will vote
 GER_sway_center_will_vote_20_percent:0 "§Y20%§! of §gCenter deputies§! will vote it. (§Y[?center_vote|0] seats§!)"
 GER_sway_right_will_vote_20_percent:0 "§Y20%§! of §2Right deputies§! will vote it. (§Y[?right_vote|0] seats§!)"
 GER_sway_neutral_will_vote_20_percent:0 "§Y20%§! of §LNeutral deputies§! will vote it. (§Y[?neutral_vote|0] seats§!)"
-GER_law_pass:0 "§GThe Law shall pass§!"
-GER_law_dont_pass:0 "§RThe Law wont likely pass§!"
+GER_law_pass:0 "§GThe Law will pass§!"
+GER_law_dont_pass:0 "§RThe Law will not pass without further swaying the Reichstag§!"
 GER_effect_if_it_pass:0 "\n\n§YEffect if the Law pass :§!"
 GER_vote_left_law:0 "This is considered as a leftist law. §Y100%§! of §Oleft deputies§!, §Y25%§! of §gcenter deputies§! and §Y25%§! of §Lneutral deputies§! will vote for it.\n\n"
 GER_vote_center_law:0 "This is considered as a centrist law. §Y100%§! of §gcenter deputies§!, §Y25%§! of §Oleft deputies§!,§Y25%§! of §2right deputies§! and §Y25%§! of §Lneutral deputies§! will vote it.\n\n"
