Fix before the leaves fall

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -364,6 +364,7 @@
  before_the_leaves_fall_desc:0 ""You will be home before the leaves have fallen from the trees."\nBut if this turns out to be a lie, it means that we have forced and deceived the young generation into hell on earth. Who is responsible for this?"
  before_the_leaves_fall_flag:0 "The Great War has ended in less than a few weeks"
  before_the_leaves_fall_failed:0 "The Second Franco-German War has escalated into the Great War"
+ before_the_leaves_fall_tt:0 "§Y[FRA.GetFlag]France§! or §Y[GER.GetFlag]Germany§! has capitulated"
  
  LIE_approach_switzerland:0 "Approach Switzerland"
 
