--- a/localisation/russian/ww1_characters_l_russian.yml
+++ b/localisation/russian/ww1_characters_l_russian.yml
@@ -2720,7 +2720,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  ROM_ferdinand_i:0 "Ferdinand I"
  ROM_mihai_i:0 "Mihai I"
  ROM_prince_nicolae:0 "Prince Regent Nicolae"
- ROM_prince_nicolae_desc:0 "Несмотря на то, что Николае называют "регентом первого ранга", он возмущен тем, что ему пришлось оставить военно-морскую карьеру, и не интересуется политикой.\n\nЧлен регентства, патриарх Мирон, сказал: «Регентство не работает, потому что у него нет головы. Принц курит свои сигареты, Сарацяну просматривает свои книги, а я, как священник, могу только пытаться примирить.»"
+ ROM_prince_nicolae_desc:0 "Несмотря на то, что Николае называют «регентом первого ранга», он возмущен тем, что ему пришлось оставить военно-морскую карьеру, и не интересуется политикой.\n\nЧлен регентства, патриарх Мирон, сказал: «Регентство не работает, потому что у него нет головы. Принц курит свои сигареты, Сарацяну просматривает свои книги, а я, как священник, могу только пытаться примирить.»"
  ROM_carol_ii:0 "Carol II"
  ROM_corneliu_zelea_codreanu:0 "Corneliu Zelea Codreanu"
  ROM_grigore_crainiceanu:0 "Grigore C. Crăiniceanuf"
