--- a/localisation/russian/ww1_decisions_l_russian.yml
+++ b/localisation/russian/ww1_decisions_l_russian.yml
@@ -6,6 +6,8 @@
  sue_for_peace_FROM:0 "Предложить мир государству [FROM.GetNameDef]"
  ww1_claims_and_cores:0 "Претензии и национальные территории"
  ww1_claims_and_cores_desc:0 "На мирной конференции после Великой войны победителям будут переданы их претензии и национальные территории из земель побежденных, если только не будет заключен мирный договор для конкретной страны или определенной территории."
+ request_french_cannons:0 "Запросить французские пушки"
+ request_german_guns:0 "Запросить немецкое оружие"
  
  generic_raise_stability: "[generic_raise_stability_text]"
  generic_raise_stability_desc: "[generic_raise_stability_desc_text]"
@@ -362,6 +364,7 @@
  before_the_leaves_fall_desc:0 "«Ты вернешься домой еще до того, как с деревьев опадут листья.»\nНо если это окажется ложью, значит, мы обманули и вынудили молодое поколение попасть в ад на земле. Кто несет за это ответственность?"
  before_the_leaves_fall_flag:0 "Великая война закончилась менее чем за несколько недель"
  before_the_leaves_fall_failed:0 "Вторая франко-германская война переросла в Великую войну"
+ before_the_leaves_fall_tt:0 "§Y[FRA.GetFlag]Франция§! или §Y[GER.GetFlag]Германия§! капитулировали"
  
  LIE_approach_switzerland:0 "Подход к Швейцарии"
  
