--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -9253,20 +9253,28 @@ july_crisis_alert_tt:0 "§RThe July crisis§! begins, opposing §Y[AUH.getFlag][
 
 GER_important_law_that_will_comeback:0 "\nIf this law is not passed, it will be proposed again in 60 days, until it is passed by the §Yreichstag§!"
 GER_vote_strengh_tt:0 "The Law may be voted by §Y[?merged_vote_strengh|0] Deputies§! on §Y199 required§!."
-GER_sway_left_will_vote_20_percent:0 "§Y20%§! of §OLeft deputies§! will vote it. (§Y[?left_vote|0] seats§!)"
+GER_sway_left_will_vote_20_percent:0 "§Y20%§! of §tLeft deputies§! will vote it. (§Y[?left_vote|0] seats§!)"
 GER_sway_center_will_vote_20_percent:0 "§Y20%§! of §gCenter deputies§! will vote it. (§Y[?center_vote|0] seats§!)"
 GER_sway_right_will_vote_20_percent:0 "§Y20%§! of §2Right deputies§! will vote it. (§Y[?right_vote|0] seats§!)"
 GER_sway_neutral_will_vote_20_percent:0 "§Y20%§! of §LNeutral deputies§! will vote it. (§Y[?neutral_vote|0] seats§!)"
+GER_sway_left_will_vote:0 "You will sway §Y20%§! of §tLeft deputies§! to support the current law"
+GER_sway_center_will_vote:0 "You will sway §Y20%§! of §gCenter deputies§! to support the current law"
+GER_sway_right_will_vote:0 "You will sway §Y20%§! of §2Right deputies§! to support the current law"
+GER_sway_neutral_will_vote:0 "You will sway §Y20%§! of §LNeutral deputies§! to support the current law"
 GER_law_pass:0 "§GThe Law will pass§!"
 GER_law_dont_pass:0 "§RThe Law will not pass without further swaying the Reichstag§!"
 GER_effect_if_it_pass:0 "\n\n§YEffect if the Law pass :§!"
-GER_vote_left_law:0 "This is considered as a leftist law. §Y100%§! of §Oleft deputies§!, §Y25%§! of §gcenter deputies§! and §Y25%§! of §Lneutral deputies§! will vote for it.\n\n"
-GER_vote_center_law:0 "This is considered as a centrist law. §Y100%§! of §gcenter deputies§!, §Y25%§! of §Oleft deputies§!,§Y25%§! of §2right deputies§! and §Y25%§! of §Lneutral deputies§! will vote it.\n\n"
+GER_vote_left_law:0 "This is considered as a leftist law. §Y100%§! of §tleft deputies§!, §Y25%§! of §gcenter deputies§! and §Y25%§! of §Lneutral deputies§! will vote for it.\n\n"
+GER_vote_center_law:0 "This is considered as a centrist law. §Y100%§! of §gcenter deputies§!, §Y25%§! of §tleft deputies§!,§Y25%§! of §2right deputies§! and §Y25%§! of §Lneutral deputies§! will vote it.\n\n"
 GER_vote_right_law:0 "This is considered as a rightist law. §Y100%§! of §2right deputies§!,§Y25%§! of §gcenter deputies§! and §Y25%§! of §Lneutral deputies§! will vote it.\n\n"
-
-left_vote_in_progress:0 "§OLeftist§! Law is being voted"
+GER_temp_sway_left:0 "Sway Leftist Deputies"
+GER_temp_sway_center:0 "Sway Centrist Deputies"
+GER_temp_sway_right:0 "Sway Rightist Deputies"
+GER_temp_sway_neutral:0 "Sway Neutral Deputies"
+left_vote_in_progress:0 "§tLeftist§! Law is being voted"
 center_vote_in_progress:0 "§gCentrist§! Law is being voted"
 right_vote_in_progress:0 "§2Rightist§! Law is being voted"
+
 FRA_vote_will_fail:0 "§RThe vote will likely fail.§!"
 FRA_vote_will_pass:0 "§GThe vote shall pass !§!"
 FRA_effect_if_law_pass:0 "\n§YEffect if the vote passes:§!"
