--- a/localisation/russian/ww1_traits_l_russian.yml
+++ b/localisation/russian/ww1_traits_l_russian.yml
@@ -250,16 +250,16 @@
  abdulhamid_paranoid_sultan_no_lar:0 "Султан-параноик"
  abdulhamid_head_of_hamidiye:0 "Глава Hamidiye"
  abdulhamid_absolute_monarchy2:0 "Абсолютный монарх"
- TUR_seyhulislam:0 "Шейх аль-ислам"
- TUR_seyhulislam_leader:0 "Шейх аль-ислам"
+ TUR_seyhulislam:0 "Şeyhülislam"
+ TUR_seyhulislam_leader:0 "Şeyhülislam"
  abdulmejid_sultan_of_arts:0 "Султан искусств"
  abdulmejid_funder_of_opera:0 "Основатель оперы"
  abdulmejid_sponsor_of_art:0 "Покровитель искусств"
  abdulmejid_sultan_of_arts2:0 "Султан искусств"
- ahmed_nihad_reconstructer_of_the_empire:0 "Восстановитель империи"
+ ahmed_nihad_reconstructer_of_the_empire:0 "Реконструктор империи"
  ahmed_nihad_bringer_of_european_architecture:0 "Принесший европейскую архитектуру"
- ahmed_nihad_industrializer:0 "Индустриалист"
- ahmed_nihad_reconstructer_of_the_empire2:0 "Восстановитель империи"
+ ahmed_nihad_industrializer:0 "Промышленник"
+ ahmed_nihad_reconstructer_of_the_empire2:0 "Реконструктор империи"
  yusuf_izzeddin_great_conqueror:0 "Великий завоеватель"
  yusuf_izzeddin_modernizor_of_the_army:0 "Модернизатор армии"
  yusuf_izzeddin_commander_of_the_army:0 "Командир армии"
