--- a/localisation/russian/ww1_traits_l_russian.yml
+++ b/localisation/russian/ww1_traits_l_russian.yml
@@ -473,3 +473,10 @@
  supreme_ruler:0 "Верховный правитель"
  ruthless_commander:0 "Беспощадный командир"
  rus_anti_communist_crusader:0 "$anti_communist_crusader$"
+ democratic_coalition:0 "Демократическая коалиция"
+ scholarly_statesman:0 "Государственный ученый"
+ left_wing_publisher:0 "Журналист левого толка"
+ modernizer:0 "Модернизатор"
+ industrialist:0 "Промышленник"
+ air_chief_glider_builder:0 "Конструктор планеров"
+ 
